fix footer align

--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -397,8 +397,8 @@
 }
 
 footer {
-    padding: 20px 0;
-    width: 100%;
+    margin-top: 20px;
+    padding: 30px 0;
 
     .legal-notice {
         width: 100%;
